# mex-common

./: .cruft-pr-body  .cruft.json  .gitignore  .isort.cfg  .mypy.ini  .pdm-python  .pre-commit-config.yaml  .pydocstyle  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  mex.bat  pyproject.toml  pytest.ini  renovate-config.js  renovate-config.json  renovate.json  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: changelog-checking.yml  cookiecutter.yml  cve-scan.yml  default.yml  documentation.yml  fuzzing.yml  gh-pages.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  reviewing.yml  security.yml  testing.yml
assets/mappings/dummy-primary-source/: primary-source.csv
assets/raw-data/ldap/: config.ldif.TEMPLATE  data.ldif.TEMPLATE
assets/raw-data/organigram/: organizational_units.json
assets/raw-data/platform/: platforms.json
assets/raw-data/primary-sources/: primary-sources.json
docs/: conf.py  index.rst  layout.html
mex/common/: __init__.py  cli.py  context.py  exceptions.py  extract.py  fields.py  logging.py  settings.py  sorters.py  transform.py  utils.py
mex/common/assets/: __init__.py  base.py  filesystem.py  registry.py
mex/common/backend_api/: __init__.py  connector.py  helpers.py  models.py
mex/common/connector/: __init__.py  base.py  http.py  utils.py
mex/common/db/: connector.py
mex/common/identity/: __init__.py  backend.py  backend_api.py  base.py  connector.py  dummy.py  helper.py  memory.py  models.py  query.py  registry.py  types.py
mex/common/ldap/: README.md  __init__.py  connector.py  extract.py  helpers.py  models.py  transform.py
mex/common/ldap/models/: actor.py  person.py  unit.py
mex/common/mapping/: main.py  schema.py  template.py  validate.py
mex/common/merged/: main.py  types.py  utils.py
mex/common/models/: README.md  __init__.py  access_platform.py  activity.py  base.py  bibliographic_resource.py  consent.py  contact_point.py  distribution.py  entity.py  extracted_data.py  filter.py  mapping.py  merged_item.py  organization.py  organizational_unit.py  person.py  primary_source.py  resource.py  rule_set.py  rules.py  schema.py  variable.py  variable_group.py
mex/common/models/base/: container.py  entity.py  extracted_data.py  field_info.py  filter.py  mapping.py  merged_item.py  model.py  model_dependencies.py  preview_item.py  rules.py  schema.py  status.py
mex/common/orcid/: connector.py  extract.py  models.py  transform.py
mex/common/orcid/models/: person.py
mex/common/organigram/: README.md  __init__.py  extract.py  helpers.py  models.py  transform.py
mex/common/primary_source/: README.md  __init__.py  connector.py  extract.py  helpers.py  models.py  transform.py
mex/common/public_api/: connector.py  extract.py  models.py  transform.py
mex/common/resources/vocabularies/: concept-schemes.json  data-processing-state.json  data-type.json  language.json  license.json  mime-type.json  resource-type-general.json
mex/common/scripts/: api.py  identity.py  purge.py  refresh.py  schema.py  seed.py
mex/common/sinks/: __init__.py  backend_api.py  base.py  load.py  ndjson.py  public_api.py  purge.py  registry.py
mex/common/testing/: __init__.py  joker.py  mocked_ldap.py  plugin.py  primary_source.py
mex/common/testing/test_data/: orcid_multiple_matches.json  orcid_person_jayne_raw.json  orcid_person_raw.json  wikidata_organization_raw.json
mex/common/types/: __init__.py  assets.py  email.py  identifier.py  identity.py  link.py  path.py  publishing_status.py  publishing_target.py  resolved_path.py  sink.py  stubs.pyi  temporal_entity.py  text.py  timestamp.py  validation.py  vocabulary.py  year_month.py
mex/common/wikidata/: README.md  __init__.py  connector.py  convenience.py  extract.py  helpers.py  models.py  transform.py
mex/common/wikidata/models/: organization.py
src/mex/common/: exceptions.py  extract.py  settings.py  transform.py  utils.py
src/mex/common/connector/: base.py  http.py
src/mex/common/identity/: __init__.py  base.py  memory.py  models.py  registry.py
tests/: conftest.py  test_cli.py  test_context.py  test_exceptions.py  test_extract.py  test_fields.py  test_logging.py  test_settings.py  test_sorters.py  test_transform.py  test_utils.py
tests/backend_api/: conftest.py  test_connector.py
tests/connector/: conftest.py  test_base.py  test_http.py
tests/identity/: conftest.py  test_backend.py  test_backend_api.py  test_connector.py  test_dummy.py  test_memory.py  test_query.py  test_registry.py
tests/ldap/: conftest.py  test_connector.py  test_extract.py  test_helpers.py  test_transform.py
tests/mapping/: test_main.py  test_schema.py  test_template.py  test_validate.py
tests/mapping/test_data/: invalid_mapping.yaml  schema.json  valid_mapping.yaml
tests/merged/: test_main.py  test_utils.py
tests/models/: conftest.py  test_base.py  test_extracted_data.py  test_filter.py  test_mapping.py  test_merged_item.py  test_model_schemas.py  test_rules.py  test_schema.py
tests/orcid/: conftest.py  record.py  record_reduced.py  test_connector.py  test_extract.py  test_model.py  test_transform.py
tests/organigram/: conftest.py  test_extract.py  test_helpers.py  test_transform.py
tests/primary_source/: conftest.py  test_extract.py  test_helpers.py  test_transform.py
tests/public_api/: conftest.py  test_connector.py  test_extract.py  test_transform.py
tests/scripts/: test_identity.py  test_schema.py  test_seed.py
tests/sinks/: test_backend_api.py  test_load.py  test_ndjson.py  test_public_api.py
tests/testing/: test_joker.py
tests/types/: conftest.py  test_email.py  test_identifier.py  test_link.py  test_path.py  test_resolved_path.py  test_temporal_entity.py  test_text.py  test_timestamp.py  test_vocabulary.py
tests/types/test_data/: dummy-vocabulary.json
tests/wikidata/: conftest.py  test_connector.py  test_convenience.py  test_extract.py  test_helpers.py  test_transform.py
tests/wikidata/test_data/: items_details.json
(+29 files in other folders)
