[project]
name = "mex-common"
version = "0.24.0"
description = "Common library for MEx python projects."
authors = [{ name = "MEx Team", email = "mex@rki.de" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
urls = { Repository = "https://github.com/robert-koch-institut/mex-common" }
requires-python = "<3.13,>=3.11"
dependencies = [
    "backoff==2.2.1",
    "click==8.1.7",
    "langdetect==1.0.9",
    "ldap3==2.9.1",
    "mex-model@git+https://github.com/robert-koch-institut/mex-model.git@2.3.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pyarrow==16.0.0",
    "pydantic-settings==2.2.1",
    "pydantic==2.6.4",
    "requests==2.31.0",
]
optional-dependencies.dev = [
    "black==24.4.2",
    "ipdb==0.13.13",
    "mypy==1.10.0",
    "pandas-stubs==2.2.1.240316",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1",
    "pytest-xdist==3.6.1",
    "pytest==8.2.0",
    "ruff==0.4.3",
    "sphinx==7.3.7",
    "types-ldap3==2.9.13.20240205",
    "types-pytz==2024.1.0.20240417",
    "types-requests==2.31.0.20240406",
]

[tool.cruft]
template = "https://github.com/robert-koch-institut/mex-template"
skip = ["CHANGELOG.md", "mex", "tests"]

[tool.ipdb]
context = 5

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = 'langdetect.*'
ignore_missing_imports = true

[tool.pdm]
distribution = true

[tool.pdm.scripts]
update-all = { cmd = "pdm update --group :all --update-eager --save-minimum" }
lock-all = { cmd = "pdm lock --group :all" }
install-all = { cmd = "pdm install --group :all" }
export-all = { cmd = "pdm export --group :all -f requirements" }
apidoc = { cmd = "pdm run sphinx-apidoc -f -o docs/source mex" }
sphinx = { cmd = "pdm run sphinx-build -aE -b dirhtml docs docs/dist" }
doc = { composite = ["apidoc", "sphinx"] }
wheel = { cmd = "pdm build --no-sdist" }
mypy-daemon = { cmd = "pdm run dmypy run --timeout 7200 -- mex" }
lint = { cmd = "pre-commit run --all-files" }
unit = { cmd = "pdm run pytest -m 'not integration'" }
test = { cmd = "pdm run pytest --numprocesses=auto --dist=worksteal" }
all = { composite = ["install-all", "lint", "test", "doc"] }


[tool.pydantic-mypy]
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--cov",
    "--no-cov-on-fail",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=95",
    "--cov-branch",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--random-order-bucket=global",
]
markers = "integration: mark a test as integration test"

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
ignore = [
    "D100",   # Allow missing module docstring for brevity
    "D104",   # Allow missing package docstring for brevity
    "D106",   # Allow missing nested class docstring (eg pydantic Config)
    "D203",   # Disallow blank line before class docstring (inverse of D211)
    "D213",   # Disallow multi-line docstring starting at second line (inverse of D212)
    "D406",   # Allow section name ending with newline (google style compat)
    "D407",   # Allow missing dashed underline after section (google style compat)
    "D413",   # Allow missing blank line after last section (google style compat)
    "N805",   # Allow first argument of a method to be non-self (pydantic compat)
    "N815",   # Allow mixedCase variables in class scope (model compat)
    "RUF012", # Allow mutable class attributes (pydantic compat)
]
select = [
    "A",    # Flake8 builtin shaddow
    "B",    # BugBear bug and issue finder
    "C90",  # McCabe complexity checker
    "D",    # Python docstring style checker
    "E",    # Python code style errors
    "ERA",  # Commented-out code detector
    "F",    # Pyflakes passive python checker
    "I",    # Isort import utility
    "N",    # Pep8 naming conventions
    "PERF", # Lint performance anti-patterns
    "RET",  # Flake8 return statement checker
    "RUF",  # Ruff-specific rules
    "S",    # Bandit automated security testing
    "T10",  # Flake8 debug statement checker
    "T20",  # Flake8 print statement checker
    "UP",   # PyUpgrade syntax recommender
    "W",    # Python code style warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D101", # Allow missing docstring in public class for tests
    "D102", # Allow missing docstring in public method for tests
    "D103", # Allow missing docstring in public function for tests
    "D107", # Allow missing docstring in `__init__` for tests
    "E501", # Allow line too long in tests
    "N807", # Allow mocking `__init__` for tests
    "S101", # Allow use of `assert` in tests
]

[tool.ruff.lint.isort]
known-first-party = ["mex", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["pdm-backend==2.1.8"]
build-backend = "pdm.backend"
